--- a/opennms-stack.env
+++ b/opennms-stack.env
@@ -5,3 +5,4 @@ POSTGRES_PASSWORD=postgres
 OPENNMS_DBNAME=opennms
 OPENNMS_DBUSER=opennms
 OPENNMS_DBPASS=opennms
+GIT_REPO=opennms-forge/gitops-opennms-config
