--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,8 +52,8 @@ services:
       - ./core/opennms-overlay:/data/opennms-overlay
     command: ["/init.sh"]
 
-  horizon:
-    image: opennms/horizon:32.0.5
+  eventd:
+    image: quay.io/opennms-labs/eventd:latest
     depends_on:
       database:
         condition: service_healthy
@@ -64,29 +64,6 @@ services:
       - opennms-data:/opennms-data
       - ./core/opennms-overlay:/opt/opennms-overlay
     command: ["-s"]
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "-I", "http://localhost:8980/opennms/login.jsp" ]
-      interval: 1m
-      timeout: 10s
-      retries: 1
     ports:
-      - "8101:8101/tcp"
-      - "8980:8980/tcp"
-
-  minion:
-    image: opennms/minion:32.0.5
-    depends_on:
-      kafka:
-        condition: service_started
-    volumes:
-      - ./minion/minion-config.yaml:/opt/minion/minion-config.yaml
-    command: ["-f"]
-    healthcheck:
-      test: "/health.sh"
-      interval: 30s
-      timeout: 20s
-      retries: 3
-    ports:
-      - "8201:8201/tcp"
-      - "1162:1162/udp"
-      - "1514:1514/udp"
+      - "5817:5817/tcp"
+      - "5817:5817/udp"
